<resources>
    <string name="app_name">POC</string>
    <string name="loading">loading... </string>
    <string name="action_settings">Settings</string>
    <string name="customer_thumbnail">customer thumbnail</string>userId
    <string name="userId">userId: %$1s</string>
    <string name="bookmark">&#xf25d;</string>
    <string name="done">&#xf058;</string>
    <string name="done_text">Done.</string>
    <string name="unbookmark">&#xf25d;</string>
    <string name="user">&#xf007;</string>
    <string name="error_book">"already booked, released by 15 mins"</string>error
    <string name="error_net">"could not conneect"</string>error
</resources>
